--- a/Class 07/Task 1/Task 1.csproj
+++ b/Class 07/Task 1/Task 1.csproj
@@ -6,4 +6,8 @@
     <RootNamespace>Task_1</RootNamespace>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Models\Models.csproj" />
+  </ItemGroup>
+
 </Project>
